# forge3d-web

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
crates/forge3d-core/: Cargo.toml
crates/forge3d-core/src/: error.rs  feature_gates.rs  lib.rs  terrain.rs
crates/forge3d-core/src/accel/: instancing.rs  lbvh_gpu.rs  mod.rs  sah_cpu.rs  types.rs
crates/forge3d-core/src/animation/: interpolation.rs  mod.rs  render_queue.rs
crates/forge3d-core/src/bundle/: manifest.rs  mod.rs
crates/forge3d-core/src/camera/: dof.rs  mod.rs
crates/forge3d-core/src/cli/: args.rs  gi_config_output.rs  gi_config_parse.rs  gi_formatting.rs  gi_params.rs  gi_parsing.rs  gi_types.rs  interactive_viewer.rs  mod.rs
crates/forge3d-core/src/colormap/: colormap1d.rs  mod.rs
crates/forge3d-core/src/converters/: mod.rs  multipolygonz_to_obj.rs
crates/forge3d-core/src/core/: async_readback.rs  big_buffer.rs  bloom.rs  cascade_split.rs  compressed_textures.rs  context.rs  double_buffer.rs  envmap.rs  error.rs  feedback_buffer.rs  fence_tracker.rs  framegraph.rs  gbuffer.rs  gpu.rs  gpu_timing.rs  gpu_types.rs  hdr.rs  hdr_readback.rs  hdr_tonemapping.rs  hdr_types.rs  ibl.rs  jitter.rs  ltc_area_lights.rs  ltc_lut.rs  ltc_types.rs  material.rs  matrix_stack.rs  memory_tracker.rs  mipmap.rs  mod.rs  overlay_layer.rs  overlays.rs  pbr.rs  reflections.rs  reflections_math.rs  reflections_types.rs  render_bundles.rs  render_bundles_types.rs  resource_tracker.rs  sampler_modes.rs  (+8 more)
crates/forge3d-core/src/export/: mod.rs  projection.rs  svg.rs  svg_labels.rs
crates/forge3d-core/src/external_image/: decode.rs  mod.rs  types.rs  upload.rs
crates/forge3d-core/src/formats/: hdr.rs  mod.rs
crates/forge3d-core/src/geo/: mod.rs  reproject.rs
crates/forge3d-core/src/geometry/: curves.rs  displacement.rs  extrude.rs  grid.rs  mod.rs  primitives.rs  py_advanced.rs  simplify.rs  subdivision.rs  tangents.rs  transform.rs  validate.rs  weld.rs
crates/forge3d-core/src/gpu/: mod.rs  runtime.rs  surface.rs
crates/forge3d-core/src/import/: building_materials.rs  cityjson.rs  mod.rs  osm_buildings.rs
crates/forge3d-core/src/io/: gltf_read.rs  mod.rs  obj_read.rs  source.rs
crates/forge3d-core/src/labels/: atlas.rs  callout.rs  collision.rs  curved.rs  declutter.rs  layer.rs  leader.rs  line_label.rs  mod.rs  projection.rs  rtree.rs  types.rs  typography.rs
crates/forge3d-core/src/license/: mod.rs
crates/forge3d-core/src/lighting/: area_lights.rs  atmospherics.rs  ephemeris.rs  ibl_cache.rs  ibl_wrapper.rs  light.rs  material.rs  mod.rs  py_bindings.rs  screen_space.rs  shadow.rs  shadow_map.rs  types.rs
crates/forge3d-core/src/loaders/: mod.rs
crates/forge3d-core/src/mesh/: mod.rs  vertex.rs
crates/forge3d-core/src/offscreen/: brdf_tile.rs  mod.rs  pipeline.rs  sphere.rs
crates/forge3d-core/src/p5/: mod.rs  ssr.rs
crates/forge3d-core/src/passes/: mod.rs  ssgi.rs  ssr.rs
crates/forge3d-core/src/path_tracing/: accel.rs  alias_table.rs  aov.rs  cache.rs  compute_types.rs  importance.rs  io.rs  lighting.rs  mod.rs
crates/forge3d-core/src/picking/: bounds.rs  heightfield_ray.rs  highlight.rs  id_buffer.rs  lasso.rs  mod.rs  ray.rs  selection.rs  terrain_query.rs  tile_id.rs  unified.rs
crates/forge3d-core/src/pipeline/: mod.rs  normal_mapping.rs  pbr.rs
crates/forge3d-core/src/pointcloud/: copc.rs  copc_decode.rs  ept.rs  error.rs  mod.rs  octree.rs  renderer.rs  traversal.rs
crates/forge3d-core/src/py_functions/: brdf.rs  diagnostics.rs  mod.rs  pointcloud.rs  vector.rs
crates/forge3d-core/src/py_module/: classes.rs  functions.rs
crates/forge3d-core/src/py_types/: aov.rs  mod.rs  offline.rs  picking.rs  pointcloud.rs  styles.rs
crates/forge3d-core/src/readback/: mod.rs
crates/forge3d-core/src/render/: colormap.rs  instancing.rs  material_set.rs  memory_budget.rs  mesh_instanced.rs  mod.rs  pbr_pass.rs
crates/forge3d-core/src/renderer/: readback.rs
crates/forge3d-core/src/scene/: core.rs  mod.rs  postfx_cpu.rs  private_impl.rs  py_api.rs  ssao.rs  stats.rs  texture_helpers.rs  types.rs
crates/forge3d-core/src/sdf/: hybrid.rs  hybrid_types.rs  mod.rs  operations.rs  primitives.rs  py.rs
crates/forge3d-core/src/shaders/: ao_from_aovs.wgsl  bloom_blur_h.wgsl  bloom_blur_v.wgsl  bloom_brightpass.wgsl  bloom_composite.wgsl  brdf_tile.wgsl  bvh_ray_query.wgsl  bvh_refit.wgsl  clipmap_lod_select.wgsl  clipmap_terrain.wgsl  cloud_shadows.wgsl  clouds.wgsl  csm.wgsl  culling_compute.wgsl  denoise_atrous.wgsl  dof.wgsl  extrusion.wgsl  fog_upsample.wgsl  ground_plane.wgsl  heightfield_ao.wgsl  heightfield_sun_vis.wgsl  hybrid_kernel.wgsl  hybrid_traversal.wgsl  hzb_build.wgsl  ibl.wgsl  ibl_brdf.wgsl  ibl_equirect.wgsl  ibl_prefilter.wgsl  lbvh_link.wgsl  lbvh_morton.wgsl  lens_effects.wgsl  lighting.wgsl  lighting_ibl.wgsl  lights.wgsl  line_aa.wgsl  mesh_basic.wgsl  mesh_instanced.wgsl  moment_generation.wgsl  normal_mapping_vertex.wgsl  offline_accumulate.wgsl  (+52 more)
crates/forge3d-core/src/shadows/: blur_pass.rs  cascade_math.rs  csm_depth_control.rs  csm_renderer.rs  csm_types.rs  mod.rs  moment_pass.rs  state.rs
crates/forge3d-core/src/style/: converters.rs  mod.rs  parser.rs  sprite.rs  types.rs
crates/forge3d-native-viewer/: Cargo.toml
crates/forge3d-native-viewer/src/: lib.rs  main.rs
crates/forge3d-native-viewer/tests/: ipc_smoke.rs
crates/forge3d-python/: Cargo.toml
crates/forge3d-python/src/: gpu.rs  lib.rs
crates/forge3d-web/: Cargo.toml  LICENSE  LICENSE-APACHE  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.api.json  tsconfig.json  vite.config.ts
crates/forge3d-web/docs/: browser-api.md  release-checklist.md  support-matrix.md
crates/forge3d-web/examples/: test-camera-resize.html  test-clear.html  test-screenshot.html  test-terrain-hill.html  test-terrain-sources.html
crates/forge3d-web/scripts/: prepare-dist.mjs
crates/forge3d-web/src/: error.rs  inputs.rs  io.rs  lib.rs  runtime.rs
crates/forge3d-web/src-ts/: index.ts
crates/forge3d-web/types/: index.d.ts
(+871 files in other folders)
