[workspace]
resolver = "2"
members = [
    "crates/forge3d-core",
    "crates/forge3d-python",
    "crates/forge3d-web",
    "crates/forge3d-native-viewer",
]

[workspace.package]
version = "1.26.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/milos-agathon/forge3d"
homepage = "https://forge3d.dev"
documentation = "https://milos-agathon.github.io/forge3d/"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytemuck = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["std"] }
env_logger = "0.10"
exr = "1.72"
flate2 = "1.0"
futures-intrusive = "0.5"
glam = "0.24"
half = "2.3"
image = { version = "0.25", default-features = false, features = ["png"] }
js-sys = "0.3"
las = { version = "0.8", features = ["laz"] }
laz = "0.9"
log = "0.4"
lyon_geom = "1.0"
lyon_path = "1.0"
lyon_tessellation = "1.0"
ndarray = "0.15"
numpy = "0.21"
once_cell = "1"
pollster = "0.3"
proj = "0.27"
pyo3 = { version = "0.21.2", features = ["abi3-py310", "macros", "multiple-pymethods"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
rstar = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
thiserror = "1"
tiff = "0.9"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
ttf-parser = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
wgpu = "29.0.3"
winit = "0.29"

[workspace.lints.clippy]
assign_op_pattern = "allow"
bind_instead_of_map = "allow"
clone_on_copy = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
derivable_impls = "allow"
doc_overindented_list_items = "allow"
empty_line_after_doc_comments = "allow"
excessive_precision = "allow"
explicit_counter_loop = "allow"
field_reassign_with_default = "allow"
get_first = "allow"
identity_op = "allow"
if_same_then_else = "allow"
inherent_to_string = "allow"
int_plus_one = "allow"
io_other_error = "allow"
iter_cloned_collect = "allow"
large_enum_variant = "allow"
let_and_return = "allow"
manual_clamp = "allow"
manual_contains = "allow"
manual_div_ceil = "allow"
manual_map = "allow"
manual_pattern_char_comparison = "allow"
manual_range_contains = "allow"
manual_range_patterns = "allow"
manual_rotate = "allow"
manual_slice_size_calculation = "allow"
manual_strip = "allow"
map_clone = "allow"
map_identity = "allow"
match_single_binding = "allow"
mixed_attributes_style = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_option_as_deref = "allow"
needless_range_loop = "allow"
needless_return = "allow"
needless_update = "allow"
new_without_default = "allow"
nonminimal_bool = "allow"
only_used_in_recursion = "allow"
print_literal = "allow"
ptr_arg = "allow"
question_mark = "allow"
redundant_closure = "allow"
redundant_field_names = "allow"
should_implement_trait = "allow"
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
unnecessary_min_or_max = "allow"
useless_conversion = "allow"
wrong_self_convention = "allow"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
