[package]
name = "forge3d-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "forge3d_core"
crate-type = ["lib"]

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck"]
webgpu = ["gpu"]

[dependencies]
async-trait.workspace = true
bytemuck = { workspace = true, optional = true }
glam.workspace = true
thiserror.workspace = true
wgpu = { workspace = true, optional = true }
