[package]
name = "forge3d-native-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "forge3d-viewer"
path = "src/main.rs"

[dependencies]
forge3d-core = { path = "../forge3d-core", features = ["gpu", "native-io", "images", "copc_laz"] }
anyhow.workspace = true
bytemuck.workspace = true
glam.workspace = true
image.workspace = true
log.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
wgpu.workspace = true
winit.workspace = true
