[package]
name = "forge3d-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_forge3d"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
async_readback = []
weighted-oit = []
images = []
enable-tbn = []
enable-gpu-instancing = []
copc_laz = []

[dependencies]
forge3d-core = { path = "../forge3d-core", features = ["gpu", "native-io", "images"] }
anyhow.workspace = true
bytemuck.workspace = true
ed25519-dalek.workspace = true
glam.workspace = true
numpy.workspace = true
pollster.workspace = true
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wgpu.workspace = true
